# try-mkdocs

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/reference/: index.en.md  index.ja.md
