[tool.poetry]
name = "try-mkdocs"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.4.3"
mkdocs-static-i18n = "^0.56"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
